<resources>
    <string name="app_name">Adrianapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_upload">Upload Video</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_video">Video</string>
    <string name="app_welcome_message">Welcome</string>
    <string name="app_message">App Message</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_wrod">Login</string>
    <string name="chkbox_remember_me">Remember Me</string>
    <string name="forgot_password_message">Forgot Password</string>
    <string name="email_placeholder">Enter Your Email</string>
    <string name="submit_recover_password">Submit</string>
    <string name="btn_login_wrod">Login</string>
    <string name="forgot_password_link">Forgot Password ?</string>
    <string name="textViewRegister">Create New Account</string>
    <string name="vidoes">Videos</string>
    <string name="android_studio">Adrian Uploader</string>
    <string name="android_studio_android_com">astudio</string>
    <string name="fullname_placeholder">Enter Your Full Name</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="contact_placeholder">Your Contact (Mobile)</string>
    <string name="buttonRegister">Register</string>
    <string name="textViewLogin">Login</string>
    <string name="Nav_Videos">Videos</string>
    <string name="Nav_Upload_video">Upload Video</string>
    <string name="Nav_Your_profile">Your Profile</string>
    <string name="Email_placeholder">Enter Your Email</string>
    <string name="alert_no_videos">No Videos Yet</string>
    <string name="help">Help</string>
    <string name="Menu_Logout">Logout</string>
    <string name="Menu_Help">Help</string>
    <string name="Menu_Settings">Settings</string>
    <string name="Menu_Refresh">Refresh</string>
    <string name="buttonUpdate">Update</string>
    <string name="placeholder_video_title">Enter the Video Title</string>
    <string name="placeholder_video_date">MM/DD/YYYY</string>
    <string name="placeholder_video_emails">Email to receive video link</string>
    <string name="Button_upload">Choose Video &amp; Upload</string>
    <string name="alert_bigFileSize">Exceeded the allowed file size</string>
    <string name="alert_no_file_selected">No file selected</string>
    <string name="alert_unkown_error">Unknown error</string>
    <string name="alert_request_timeout">Request timeout</string>
    <string name="alert_failed_connection_to_server">Failed to connect server</string>
    <string name="alert_resource_not_found">Resource not found</string>
    <string name="stm_login_again">Please login again</string>
    <string name="stm_check_your_inputs">Check your inputs</string>
    <string name="stm_its_getting_wrong">Something is getting wrong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_select_date">Select Delivery Date</string>
    <string name="textview_deliver_date">Deliver Date</string>
    <string name="textview_sent">Sent :</string>
    <string name="alert_connection_problem">Check your internet connection</string>
    <string name="stm_yes">Yes</string>
    <string name="stm_no">Not Yet</string>
    <string name="alert_success_video_deleted">Video Deleted Successfully</string>
    <string name="alert_went_wrong">Something went wrong</string>
    <string name="alert_danger_deleting_video">Error Deleting Video</string>
    <string name="alert_danger_fetching_videos">Error Fetching Videos</string>
    <string name="label_video_title">Video Title</string>
    <string name="label_video_emails">Emails</string>
    <string name="buttonDelete_video_desc">Delete Video Desc</string>
    <string name="title_activity_register">Registration</string>
    <string name="dialog_close">Close</string>
    <string name="page_head_watching_video">You are watching</string>
    <string name="button_cancel">Cancel</string>
    <string name="textViewAllowedQtyString">Allowed Videos to Upload :</string>
    <string name="textViewUploadedString">Uploaded Vidoes :</string>
    <string name="uploading_video">Uploading Video ...</string>

</resources>
