<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.hizyaz.adrianapp.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAppWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/app_welcome_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="42sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_message"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="24sp"
            app:fontFamily="cursive" />

        <TextView
            android:id="@+id/textViewResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light" />

        <LinearLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">
            <!--invisible-->

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/username_placeholder"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/holo_orange_dark" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/Email_placeholder"
                android:inputType="textEmailAddress"
                android:textColorLink="@android:color/holo_orange_dark" />

            <EditText
                android:id="@+id/editTextFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/fullname_placeholder"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/holo_orange_dark" />

            <EditText
                android:id="@+id/editTextContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/contact_placeholder"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/holo_orange_dark" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                android:textColorLink="@android:color/holo_orange_dark" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password_placeholder"
                android:inputType="textPassword"
                android:textColorLink="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/buttonRegister" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/textViewLogin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:fontFamily="sans-serif-condensed" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>