<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.hizyaz.adrianapp.activities.MainActivity">


    <TextView
        android:id="@+id/textViewAppWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/app_welcome_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="42sp"
        app:fontFamily="sans-serif-condensed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_message"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="24sp"
        app:fontFamily="cursive" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--login layout-->

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">
            <!--invisible-->

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/username_placeholder"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/holo_orange_dark" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_placeholder"
                android:inputType="textPassword"
                android:textColorLink="@android:color/holo_orange_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/login_wrod" />

                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forgot_password_link"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    app:fontFamily="sans-serif-condensed" />

            </LinearLayout>

        </LinearLayout>


        <!--forgot password-->
        <LinearLayout
            android:id="@+id/forgetPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password_message"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextForgotPassEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical|center"
                android:hint="@string/email_placeholder"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/buttonForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_recover_password" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/btn_login_wrod"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!--Forget Your Password ? Click Here!-->
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_links"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/textViewRegister"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:fontFamily="sans-serif-condensed" />
    </LinearLayout>

</LinearLayout>
