<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hizyaz.adrianapp.activities.VideoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/ProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:visibility="gone"/>



        <TextView
            android:id="@+id/textViewResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light" />

        <LinearLayout
            android:id="@+id/layout_video_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:text="@string/label_video_title"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/vid_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/placeholder_video_title"
                android:inputType="text"
                android:textColorLink="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:text="@string/label_video_emails"
                android:textStyle="normal|bold" />

            <EditText
                android:id="@+id/editTextVideoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_video_emails"
                android:inputType="textEmailAddress"
                android:textColorLink="@android:color/holo_orange_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonPickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="buttonPickDate"
                    android:text="@string/button_select_date" />

                <EditText
                    android:id="@+id/editTextDeliveryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/placeholder_video_date"
                    android:inputType="date" />


            </LinearLayout>

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_update"
                android:layout_gravity="center_horizontal"
                android:text="@string/buttonUpdate" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_cancel"
                android:text="@string/button_cancel" />


        </LinearLayout>
        <!-- Watch video -->
        <RelativeLayout
            android:id="@+id/layout_video_watch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textViewVideoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="normal|italic" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
