<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hizyaz.adrianapp.activities.UploadVideoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fab_margin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_message"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="24sp"
            app:fontFamily="cursive" />

        <TextView
            android:id="@+id/textViewResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressDrawable="@color/colorPrimary"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_video_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_video_emails"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPickDate"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/colorPrimary"
                android:textColor="@color/mdtp_white"
                android:onClick="buttonPickDate"
                android:text="@string/button_select_date" />

            <EditText
                android:id="@+id/editTextDeliveryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/placeholder_video_date"
                android:inputType="date" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/padding_5dp"
            android:paddingRight="@dimen/padding_5dp"
            android:text="@string/Button_upload"
            android:textColor="@color/mdtp_white" />


        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone" />

        <!--<com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/adView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:layout_marginTop="40dp"-->
            <!--ads:adSize="SMART_BANNER"-->
            <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />-->
    </LinearLayout>

</ScrollView>
